added comments to html

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,9 +8,10 @@
 </head>
 
 <body>
+    <!-- header start -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,11 +23,13 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </header>
 
+    <!-- necessary for placing the hero image -->
     <div class="hero"></div>
 
+    <!-- content section -->
     <section class="content">
         <div id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -53,6 +56,7 @@
         </div>
     </section>
 
+    <!-- benefits section, box to the right -->
     <section class="benefits">
         <div>
             <h3>Lead Generation</h3>
@@ -79,6 +83,7 @@
         </div>
     </section>
 
+    <!-- footer, not shown in mock up -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
